--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <p>World’s first crypto-native operating system built for web3.</p>
   <button type="button" class="btn-primary" onclick="openModal()">
-    Open Secure Download
+    Generated Code
   </button>
 
   <!-- Tambahan -->
